[package]
name = "swap-rs"
version = "1.0.0"
edition = "2021"
description = "A library for creating Linux swap areas (SWAPSPACE2 format)"
authors = ["Oleksandr Mametov"]
repository = "https://github.com/mametoff/swap-rs"
license = "MIT"
keywords = ["swap", "mkswap", "linux", "swapspace"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
uuid = { version = "1", features = ["v4", "v1", "serde"] }
libc = "0.2"
